Header z-index fixed

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,6 @@
 .header {
   position: sticky;
+  z-index: 9999;
   top: 0;
   font-size: small;
   background-color: var(--pri-gray);
